namespace BasicCombatGame;

public class HUD
{
    private double HP;
    private int score;
}