using System.Runtime.InteropServices.JavaScript;

namespace BasicCombatGame;

public class Item
{
    private JSType.String nom { get; set; }
    private JSType.String type { get; set; }

    public void Collect()
    {
        
    }
}