using System.Collections.Generic;

namespace BasicCombatGame;

public class Jeu
{
    private int etagesTotal { get; set; }
    private Etage etageCourant { get; set; }
    private Joueur joueur { get; set; }
    private List<Ennemie> enemies { get; set; }
    private int score { get; set; }
    
    public void Start()
    {
        
    }

    public void Update()
    {
        
    }
}